@@ -4,7 +4,7 @@
 
   <groupId>org.camunda.optimize</groupId>
   <artifactId>parent</artifactId>
-  <version>3.4.0</version>
+  <version>3.5.0</version>
   <packaging>pom</packaging>
   <name>Camunda Optimize</name>
 
@@ -25,31 +25,30 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.previousVersion>3.4.0</project.previousVersion>
 
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
     <camunda.engine.version>7.15.0</camunda.engine.version>
     <camunda.maven.artifacts.version>7.15.0-ee</camunda.maven.artifacts.version>
+    <zeebe.version>1.0.0</zeebe.version>
 
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
     <!-- maven plugins -->
-    <plugin.version.sonar>3.8.0.2131</plugin.version.sonar>
+    <plugin.version.sonar>3.9.0.2155</plugin.version.sonar>
 
-    <jackson.version>2.12.2</jackson.version>
-    <jsonpath.version>2.5.0</jsonpath.version>
+    <jackson.version>2.12.3</jackson.version>
+    <jsonpath.version>2.6.0</jsonpath.version>
     <elasticsearch.version>7.10.0</elasticsearch.version>
     <!--The least supported elasticsearch version we should test against-->
-    <elasticsearch.test.version>7.5.1</elasticsearch.test.version>
+    <elasticsearch.test.version>7.10.0</elasticsearch.test.version>
     <!--the ElasticSearch version of the previous Optimize version -->
-    <previous.optimize.elasticsearch.version>7.3.0</previous.optimize.elasticsearch.version>
+    <previous.optimize.elasticsearch.version>7.8.0</previous.optimize.elasticsearch.version>
     <!-- https://www.elastic.co/guide/en/elasticsearch/client/java-api/6.5/_using_another_logger.html -->
     <elasticsearch.log4j.version>2.14.1</elasticsearch.log4j.version>
     <guava.version>30.1.1-jre</guava.version>
-    <spring.version>5.3.5</spring.version>
-    <mockito.version>3.8.0</mockito.version>
+    <spring.version>5.3.7</spring.version>
+    <mockito.version>3.10.0</mockito.version>
     <httpclient.version>4.5.13</httpclient.version>
     <hamcrest.version>1.3</hamcrest.version>
-    <junit.jupiter.version>5.7.1</junit.jupiter.version>
-    <junit.platform.version>1.7.1</junit.platform.version>
+    <junit.jupiter.version>5.7.2</junit.jupiter.version>
+    <junit.platform.version>1.7.2</junit.platform.version>
     <mockserver.version>5.11.2</mockserver.version>
     <quartz.version>2.3.2</quartz.version>
     <assertj.version>3.19.0</assertj.version>
@@ -329,7 +328,7 @@
     <dependency>
       <groupId>org.awaitility</groupId>
       <artifactId>awaitility</artifactId>
-      <version>4.0.3</version>
+      <version>4.1.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -365,6 +364,7 @@
             <skipTests>${skip.unit.tests}</skipTests>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <useModulePath>false</useModulePath>
+            <argLine>--illegal-access=permit</argLine>
           </configuration>
           <dependencies>
             <dependency>
@@ -381,6 +381,7 @@
           <configuration>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <useModulePath>false</useModulePath>
+            <argLine>--illegal-access=permit</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -435,12 +436,12 @@
         <plugin>
           <groupId>com.github.eirslett</groupId>
           <artifactId>frontend-maven-plugin</artifactId>
-          <version>1.11.3</version>
+          <version>1.12.0</version>
         </plugin>
         <plugin>
           <groupId>com.mycila</groupId>
           <artifactId>license-maven-plugin</artifactId>
-          <version>4.0</version>
+          <version>4.1</version>
         </plugin>
         <!-- sonar relevant stuff -->
         <plugin>
@@ -451,7 +452,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.6</version>
+          <version>0.8.7</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -518,6 +519,14 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <release>11</release>
+        </configuration>
       </plugin>
     </plugins>
 
